# magikarp

./: .gitignore  README.md  find_tokens_in_training_data.ipynb  generate_results.py  generate_summary.py  lm.py  pyproject.toml  run_verification.sh
magikarp/: fishing.py  model.py  report.py  tokenization.py  unused_tokens.py  utils.py
results/: summary.md
results/reports/: 01_ai_Yi_1_5_9B.md  01_ai_Yi_9B.md  01_ai_Yi_Coder_9B_Chat.md  152334H_miqu_1_70b_sf.md  EleutherAI_gpt_j_6b.md  EleutherAI_gpt_neox_20b.md  EleutherAI_pythia_6_9b.md  Fugaku_LLM_Fugaku_LLM_13B.md  HuggingFaceH4_zephyr_7b_beta.md  LGAI_EXAONE_EXAONE_3_0_7_8B_Instruct.md  LGAI_EXAONE_EXAONE_3_5_2_4B_Instruct.md  Nexusflow_Starling_LM_7B_beta.md  PleIAs_Pleias_1_2b_Preview.md  Qwen_Qwen1_5_32B.md  Qwen_Qwen1_5_72B_Chat.md  Qwen_Qwen1_5_MoE_A2_7B.md  Qwen_Qwen2_57B_A14B.md  Qwen_Qwen2_5_32B_Instruct.md  Qwen_Qwen2_5_7B.md  Qwen_Qwen2_5_7B_Instruct.md  Qwen_Qwen3_32B.md  Qwen_Qwen3_5_4B.md  Rakuten_RakutenAI_7B.md  Skywork_Skywork_13B_base.md  ai21labs_Jamba_v0_1.md  allenai_Llama_3_1_Tulu_3_8B.md  allenai_OLMoE_1B_7B_0924.md  allenai_OLMo_1_7_7B_hf.md  allenai_OLMo_2_1124_13B.md  allenai_OLMo_2_1124_7B.md  allenai_OLMo_7B_hf.md  benjamin_Mistral_7B_v0_1_zett_gpt2.md  bigcode_starcoder2_15b.md  chuxin_llm_Chuxin_1_6B_Base.md  deepseek_ai_DeepSeek_R1.md  deepseek_ai_DeepSeek_V2_Lite.md  deepseek_ai_deepseek_coder_33b_base.md  deepseek_ai_deepseek_llm_7b_base.md  deepseek_ai_deepseek_math_7b_base.md  facebook_xglm_7_5B.md  (+41 more)
results/reports_mini/: 01_ai_Yi_1_5_9B.md  01_ai_Yi_9B.md  01_ai_Yi_Coder_9B_Chat.md  152334H_miqu_1_70b_sf.md  CohereForAI_aya_23_35B.md  CohereForAI_c4ai_command_r_plus.md  CohereForAI_c4ai_command_r_v01.md  EleutherAI_gpt_j_6b.md  EleutherAI_gpt_neox_20b.md  EleutherAI_pythia_6_9b.md  Fugaku_LLM_Fugaku_LLM_13B.md  HuggingFaceH4_zephyr_7b_beta.md  LGAI_EXAONE_EXAONE_3_0_7_8B_Instruct.md  LGAI_EXAONE_EXAONE_3_5_2_4B_Instruct.md  Nexusflow_Starling_LM_7B_beta.md  PleIAs_Pleias_1_2b_Preview.md  Qwen_Qwen1_5_32B.md  Qwen_Qwen1_5_72B_Chat.md  Qwen_Qwen1_5_MoE_A2_7B.md  (+72 more)
test/: conftest.py  test_metrics.py  test_tokenizer.py
