[tool.poetry]
name = "magikarp"
version = "0.1.0"
description = "Code for the paper 'Fishing for Magikarp: Automatically detecting under-trained tokens in large language models'"
authors = ["Sander Land <sander@cohere.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fire = "^0.6.0"
huggingface-hub = {version = "^0.21.4", extras = ["cli"]}
transformers = "^4.40.1"
torch = "^2.2.1"
numpy = "^1.26.4"
sentencepiece = "^0.2.0"
protobuf = "^5.26.0"
scikit-learn = "^1.4.1.post1"
jupyterlab = "^4.1.5"
pandas = "^2.2.1"
ipywidgets = "^8.1.2"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
tiktoken = "^0.6.0"
tabulate = "^0.9.0"
datasets = "^2.19.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pre-commit = "^3.7.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
