[project]
name = "magikarp"
version = "0.2.2"
description = "Code for the paper 'Fishing for Magikarp: Automatically detecting under-trained tokens in large language models'"
authors = [
    {name = "Sander Land", email = "sander@cohere.com"},
]
requires-python = "<4.0,>=3.9"
dependencies = [
    "fire<1.0.0,>=0.6.0",
    "huggingface-hub<1.0.0,>=0.25.0",
    "transformers<5.0.0,>=4.51.0",
    "torch<3.0.0,>=2.2.1",
    "numpy<2.0.0,>=1.26.4",
    "sentencepiece<1.0.0,>=0.2.0",
    "protobuf<6.0.0,>=5.26.0",
    "scikit-learn<2.0.0.0,>=1.4.1.post1",
    "pandas<3.0.0,>=2.2.1",
    "matplotlib<4.0.0,>=3.8.3",
    "seaborn<1.0.0,>=0.13.2",
    "tiktoken<1.0.0,>=0.6.0",
    "tabulate<1.0.0,>=0.9.0",
    "datasets<3.0.0,>=2.19.1",
    "pytest<9.0.0,>=8.1.1",
    "pre-commit<4.0.0,>=3.7.0",
    "jupyterlab<5.0.0,>=4.1.5",
    "ipywidgets<9.0.0,>=8.1.2",
    "hf-xet>=1.0.3",
]
readme = "README.md"


[tool.uv]
default-groups = []

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
